# FeijoaBot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  TODO.md  main.py  membercount.py  pyproject.toml
cogs/: activity.py  admin_economy.py  autotranslate.py  bal.py  blackjack.py  bump_handler.py  config.py  daily.py  debug.py  delete_custom_roles.py  delete_range.py  donate.py  error_handler.py  forwarder.py  game_admin.py  help.py  inactive.py  invites.py  joinleave.py  leaderboard.py  leveling.py  moderate.py  modlog.py  modspam.py  mojang_profile.py  paper_trading.py  pingrole.py  privacy.py  pruner.py  reaction_roles.py  reminders.py  retention.py  s_w_l.py  security_audit.py  serverstats.py  starter.py  voicechat.py  who_started.py
data/: conversation_starters.txt
modules/: BotCore.py  ConfigDB.py  CurrencyLedgerDB.py  Database.py  InvitesDB.py  KiwiBot.py  PrivacyDB.py  ReminderDB.py  UserDB.py  VoiceChatDB.py  aio_twelvedata.py  audit_utils.py  clean_string.py  config.py  discord_search.py  discord_utils.py  dtypes.py  errors.py  exceptions.py  guild_cog.py  heatmap.py  help_command.py  leveling_utils.py  result.py  security_utils.py  server_admin.py  trading_logic.py  translation.py  utils.py  vc_color.py
